--- a/packages/website/package.json
+++ b/packages/website/package.json
@@ -16,6 +16,7 @@
     "antd": "^4.24.1",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.13.0",
     "next": "13.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
